# rracer

./: .gitignore  Cargo.toml  Dockerfile  README.md  implementation.md  setup.sh
.github/workflows/: ci.yml
server/: Cargo.toml  urls.txt
server/src/: db.rs  main.rs
shared/: Cargo.toml
shared/src/: fsm.rs  lib.rs  passages.rs  protocol.rs  wpm.rs
web/: Cargo.toml  Trunk.toml  index.html
web/src/: app.rs  lib.rs  normalize.rs  websocket.rs
web/static/: index.html
