[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.27"
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = "6.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }ge]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
