[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.27"
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = "6.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
rust-fsm = "0.8"
rand = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset"] }
scraper = "0.17"
dotenvy = "0.15"
