[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../shared" }
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Event",
    "KeyboardEvent",
    "WebSocket",
    "MessageEvent",
    "Location",
] }
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
gloo-timers = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
